# rodoo

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/rodoo/: cli.py  config.py  distro_dependency.py  exceptions.py  output.py  runner.py  utils.py
src/rodoo/cli/: main.py  oca.py
src/rodoo/utils/: exceptions.py  misc.py  odoo.py  venv.py
tests/: test_cli.py  test_config.py  test_runner.py
