[project]
name = "rodoo"
version = "0.1.0"
description = "A CLI tool to streamline Odoo development environments."
readme = "README.md"
authors = [
    { name = "trisdoan", email = "doanminhtri8183@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "distro",
    "platformdirs",
    "tomlkit",
    "typer",
    "psutil",
]

[project.scripts]
rodoo = "rodoo.cli:app"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
