[project]
name = "rodoo"
version = "0.1.0"
description = "A CLI tool to streamline Odoo development environments."
readme = "README.md"
authors = [
    { name = "trisdoan", email = "doanminhtri8183@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "distro",
    "platformdirs",
    "tomlkit",
    "typer",
    "psutil",
]

[project.optional-dependencies]
build = ["uv ~= 0.8.14"]
test = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-mock",
]
[tool.semantic_release]
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[project.scripts]
rodoo = "rodoo.cli:app"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
